@@ -57,7 +57,7 @@ The EDL Edit Window allows you to see a reel as a timeline EDL and allows you to
 
 An EDL is basically a list of images stored under a particular name.
 &nbsp;This list of images can be reordered simply by doing drag and
-drop of the image in the Reel window. &nbsp;You can also quickly switch from one image
+drop of the image in the Reel window or in the EDL Edit window. &nbsp;You can also quickly switch from one image
 or
 movie to another by clicking on any item on the EDL.<br>
 
@@ -67,6 +67,10 @@ mrViewer allows you to zoom into a timeline bar of the EDL by pressing the 'f' k
 
 <br>
 
-The Editing of the EDL is done by selecting the start or ending of an EDL timebar and dragging left or right according to where you want more or less frames to show.  While dragging the current frame is displayed in the main viewer window.<br>
+The Editing of the EDL is done by selecting with the RMB the start or ending of an EDL timebar and dragging left or right according to where you want more or less frames to show.  While dragging the current frame is displayed in the main viewer window.<br>
+
+<br>
+
+Currently you cannot reliably do edits across the network to a remote mrViewer.  This is a limitation that shall be removed in the future.
 
 <br>
