@@ -3,6 +3,7 @@ v2.4.2  - Added EDL Edit window.
 	- Fixed playback of EDL when edits are made.
 	- Fixed removal of images in reel list.
 	- Added Auto Fit Image to Preferences and MainWindow.
+	- Bug fixed remote communications a bit.
 v2.4.1  - Added Blend Modes (Traditional and Premult) for compositing.
 v2.3.10 - Fixed playback of Essa.wmv due to use of dts in loop.
 v2.3.9  - Fixed reverse playback and looping last frame.
